--- a/aop-app/pom.xml
+++ b/aop-app/pom.xml
@@ -22,6 +22,13 @@
             <artifactId>logback-classic</artifactId>
             <version>1.1.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.sun</groupId>
+            <artifactId>tools</artifactId>
+            <version>1.8</version>
+            <scope>system</scope>
+            <systemPath>${java.home}/../lib/tools.jar</systemPath>
+        </dependency>
     </dependencies>
 
     <build>
