--- a/aop-lib/pom.xml
+++ b/aop-lib/pom.xml
@@ -3,8 +3,8 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>aop-ltw</artifactId>
-        <groupId>aop-ltw</groupId>
+        <artifactId>aop-example</artifactId>
+        <groupId>aop-example</groupId>
         <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
