--- a/aop-ltw/pom.xml
+++ b/aop-ltw/pom.xml
@@ -3,17 +3,17 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>aop-ltw</artifactId>
-        <groupId>aop-ltw</groupId>
+        <artifactId>aop-example</artifactId>
+        <groupId>aop-example</groupId>
         <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>aop-app</artifactId>
+    <artifactId>aop-ltw</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>aop-ltw</groupId>
+            <groupId>aop-example</groupId>
             <artifactId>aop-lib</artifactId>
             <version>1.0</version>
         </dependency>
@@ -62,7 +62,7 @@
                                     <addClasspath>true</addClasspath>
                                     <useUniqueVersions>false</useUniqueVersions>
                                     <classpathPrefix>lib/</classpathPrefix>
-                                    <mainClass>com.aop.app.Main</mainClass>
+                                    <mainClass>com.aop.ltw.Main</mainClass>
                                 </manifest>
                                 <manifestEntries>
                                     <Class-Path>conf/</Class-Path>
